[metadata]
name = ddbmock
version = 0.4.1.dev
summary = Amazon DynamoDB mock implementation
description-file = README.rst
author = Jean-Tiare Le Bigot
author_email = jtlebigot@socialludia.com
home_page = https://bitbucket.org/Ludia/dynamodb-mock
classifier =
    Topic :: Internet
    Topic :: Database :: Database Engines/Servers
    Topic :: Education :: Testing
    Topic :: Software Development :: Testing
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
requires-dist =
    Sphinx

[nosetests]
where = tests/
match = ^test
nocapture = 1
cover-package = ddbmock
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
